新增：用户列表接口、上传头像接口、查看头像接口 修复：redis注入为空null

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+# spring 配置
 spring:
   mvc:
     pathmatch:
@@ -20,8 +23,11 @@ spring:
           auth: true
           starttls:
             enable: true
-server:
-  port: 8080
+  redis:
+    port: 6379
+    host: localhost
+    database: 0
+# 持久层设置
 mybatis-plus:
   mapper-locations: classpath:space/kuikui/oj/mapper/*.xml
   configuration:
