新增：条件用户查询接口 修改：把原先的分页插件(适用与mybatis)的换成了使用与mybatis plus 的 PaginationInnerInterceptor

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,17 +32,12 @@ mybatis-plus:
   mapper-locations: classpath:space/kuikui/oj/mapper/*.xml
   configuration:
     map-underscore-to-camel-case: false
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:
     db-config:
       logic-delete-field: isDelete #
       logic-delete-value: 1
       logic-not-delete-value: 0
-# 分页查询插件配置
-pagehelper:
-  helper-dialect: mysql
-  params: count=countSql
-  reasonable: true
-  support-methods-arguments: true
 
 
 
