实现竞赛功能

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,7 +53,7 @@ mybatis-plus:
       logic-not-delete-value: 0
 # 代码沙箱设置
 code:
-  default: example
+  default: remote
 # jwt设置
 jwt:
   sign: 512420
